Adding code coverage reporting with coverage-html and coverage-xml targets.
(bzr r727.3.1)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ SUBDIRS = data NuxCore NuxGraphics Nux examples gputests tests tools
 
 CXXFLAGS += -fno-permissive
 
+include $(top_srcdir)/Makefile.am.coverage
 include doxygen-include.am
 
 if BUILD_DOCUMENTATION
