--- a/NuxGraphics/Makefile.am
+++ b/NuxGraphics/Makefile.am
@@ -17,7 +17,8 @@ libnux_graphics_@NUX_API_VERSION@_la_CPPFLAGS= \
   $(GCC_FLAGS) \
   $(NUX_GRAPHICS_CFLAGS) \
   $(MAINTAINER_CFLAGS) \
-  $(GEIS_CFLAGS)
+  $(GEIS_CFLAGS) \
+  $(COVERAGE_FLAGS)
 
 libnux_graphics_@NUX_API_VERSION@_la_LIBADD = \
   $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
@@ -25,7 +26,8 @@ libnux_graphics_@NUX_API_VERSION@_la_LIBADD = \
   $(GEIS_LIBS)
 
 libnux_graphics_@NUX_API_VERSION@_la_LDFLAGS = \
-  $(NUX_LT_LDFLAGS)
+  $(NUX_LT_LDFLAGS) \
+  $(COVERAGE_LDFLAGS)
 
 source_h = \
   $(srcdir)/BitmapFormats.h \
