Fixup package dependencies for libnux-4.0-dev to be more accurate
(bzr r734.2.1)

--- a/debian/control
+++ b/debian/control
@@ -74,18 +74,22 @@ Architecture: any
 Depends: libnux-4.0-0 (= ${binary:Version}),
          libglib2.0-dev (>= 2.25.14),
          libgdk-pixbuf2.0-dev,
+         libboost-dev,
          libcairo2-dev (>= 1.9.14),
          libpng12-dev (>= 1.2.44),
          libglew-dev [!armel !armhf],
          libglewmx-dev [!armel !armhf],
-         libboost-dev,
-         libxxf86vm-dev,
          libgl1-mesa-dev [!armel !armhf],
+         libglu1-mesa-dev [!armel !armhf],
          libegl1-mesa-dev [armel armhf],
          libgles2-mesa-dev [armel armhf],
+         libgeis-dev (>= 2.2.10),
          libsigc++-2.0-dev,
-         libpango1.0-dev,
          libpcre3-dev,
+         libx11-dev,
+         libxext-dev,
+         libxinerama-dev,
+         libxxf86vm-dev,
          ${misc:Depends}
 Description: Visual rendering toolkit for real-time applications - dev files
  Nux is a graphical user interface toolkit for applications that mixes opengl
