TestTextures: add test for checking the NUX_FALLBACK_TEXTURE env var
(bzr r794.1.10)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -189,10 +189,7 @@ gtest_nuxgraphics_LDADD = \
   libgtest.a
 
 gtest_nuxgraphics_LDFLAGS = \
-  -lpthread -lgmock \
-  -lboost_filesystem -lboost_system
-
-
+  -lgmock
 
 TestFlags = -I$(srcdir) \
   -I$(top_srcdir) \
