Move to newer upstream google-mock library with potentially embedded google-test (lp: #1185265).
Fixes LP: #1185265

(bzr r800.1.1)

--- a/configure.ac
+++ b/configure.ac
@@ -288,16 +288,8 @@ AS_IF([test "x$enable_tests" = "xyes"],
       [
         # Check for google gtest
         CHECK_GTEST
-        AS_IF([test "x$have_gtest" = "xyes"],
-          [AC_SUBST([GTEST_CPPFLAGS])],
+        AS_IF([test "x$have_gtest" != "xyes"],
           [AC_MSG_WARN([you are missing google-test, apt-get install libgtest-dev])])
-
-        # Check for googlemock
-        AC_LANG_PUSH([C++])
-        AC_CHECK_HEADER([gmock/gmock.h],
-                       [have_gmock=yes],
-                       [AC_MSG_WARN([you are missing google-mock, apt-get install google-mock])])
-        AC_LANG_POP([C++])
 
        #Check for libboost
 
