--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,7 @@ Build-Depends: debhelper (>= 9),
                libboost-dev,
                libboost-filesystem-dev,
                libboost-system-dev,
-               libgtest-dev,
-               google-mock,
+               google-mock (>= 1.6.0),
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
                libglew-dev [!armel !armhf],
