--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,9 +1,10 @@
 if BUILD_TESTS
 
-nodist_libgtest_a_SOURCES = $(GTEST_SOURCE)/src/gtest-all.cc
+nodist_libgtest_a_SOURCES = \
+ $(GMOCK_PREFIX)/src/gmock-all.cc \
+ $(GTEST_PREFIX)/src/gtest-all.cc
 
-libgtest_a_CPPFLAGS = $(GTEST_CPPFLAGS) -w
-libgtest_a_CXXFLAGS = $(GTEST_CXXFLAGS) $(AM_CXXFLAGS)
+libgtest_a_CPPFLAGS = $(GMOCK_CPPFLAGS) $(GTEST_CPPFLAGS) -w
 check_LIBRARIES = libgtest.a
 
 check_PROGRAMS = \
@@ -54,6 +55,7 @@ gtest_nuxcore_CPPFLAGS = \
   -DDATADIR=\""$(datadir)"\" \
   -DG_LOG_DOMAIN=\"NuxTests\" \
   -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GMOCK_CPPFLAGS) $(GTEST_CPPFLAGS) \
   $(GCC_TESTS_FLAGS) \
   $(NUX_CORE_CFLAGS) \
   $(NUX_EXAMPLES_CFLAGS) \
@@ -66,7 +68,7 @@ gtest_nuxcore_LDADD = \
   libgtest.a
 
 gtest_nuxcore_LDFLAGS = \
-  -lpthread -lgmock \
+  -lpthread \
   -lboost_filesystem -lboost_system
 
 ##### gtest-nux ######
@@ -98,6 +100,7 @@ gtest_nux_CPPFLAGS = \
   -DDATADIR=\""$(datadir)"\" \
   -DG_LOG_DOMAIN=\"NuxTests\" \
   -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GMOCK_CPPFLAGS) $(GTEST_CPPFLAGS) \
   $(GCC_TESTS_FLAGS) \
   $(NUX_CORE_CFLAGS) \
   $(NUX_EXAMPLES_CFLAGS) \
@@ -114,7 +117,7 @@ gtest_nux_LDADD = \
   libgtest.a
 
 gtest_nux_LDFLAGS = \
-  -lpthread -lgmock \
+  -lpthread  \
   -lboost_filesystem -lboost_system
 
 ##### gtest-nux-slow ######
@@ -141,6 +144,7 @@ gtest_nux_slow_CPPFLAGS = \
   -DDATADIR=\""$(datadir)"\" \
   -DG_LOG_DOMAIN=\"NuxTests\" \
   -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GMOCK_CPPFLAGS) $(GTEST_CPPFLAGS) \
   $(GCC_TESTS_FLAGS) \
   $(NUX_CORE_CFLAGS) \
   $(NUX_EXAMPLES_CFLAGS) \
@@ -157,7 +161,7 @@ gtest_nux_slow_LDADD = \
   libgtest.a
 
 gtest_nux_slow_LDFLAGS = \
-  -lpthread -lgmock \
+  -lpthread  \
   -lboost_filesystem -lboost_system
 
 ##### gtest-nuxgraphics ######
@@ -175,6 +179,7 @@ gtest_nuxgraphics_CPPFLAGS = \
   -DDATADIR=\""$(datadir)"\" \
   -DG_LOG_DOMAIN=\"NuxTests\" \
   -DTESTDIR=\""$(top_srcdir)/tests"\" \
+  $(GMOCK_CPPFLAGS) $(GTEST_CPPFLAGS) \
   $(GCC_TESTS_FLAGS) \
   $(NUX_CORE_CFLAGS) \
   $(NUX_EXAMPLES_CFLAGS) \
@@ -187,9 +192,6 @@ gtest_nuxgraphics_LDADD = \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS) \
   libgtest.a
-
-gtest_nuxgraphics_LDFLAGS = \
-  -lgmock
 
 TestFlags = -I$(srcdir) \
   -I$(top_srcdir) \
