* Current XIM Work. Plan on moving the bulk of the work to WindowThread.   As the XIC needs to access to the TextEntry, which GraphicsDisplayX11 doesn't have.
(bzr r831.2.1)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -129,7 +129,9 @@ endif
 
 if USE_X11
 source_cpp += \
-  $(srcdir)/InputMethodIBus.cpp
+  $(srcdir)/InputMethodIBus.cpp \
+  $(srcdir)/XICClient.cpp \
+  $(srcdir)/XIMController.cpp
 endif
 
 if HAVE_GEIS
@@ -244,7 +246,9 @@ endif
 
 if USE_X11
 source_cpp += \
-  $(srcdir)/InputMethodIBus.h
+  $(srcdir)/InputMethodIBus.h \
+  $(srcdir)/XICClient.h \
+  $(srcdir)/XIMController.h
 endif
 
 if HAVE_GEIS
