--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -86,6 +86,4 @@ dist_uitextures_DATA = \
   UITextures/VectorZLabel.tga \
   UITextures/VScrollBar.tga \
   UITextures/WindowSizeGrip.tga \
-  UITextures/nux.png \
-  UITextures/coverflow.oval-shadow.png
-  
+  UITextures/nux.png
