--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -27,144 +27,144 @@ libnux_core_@NUX_API_VERSION@_la_LDFLAGS = \
   $(COVERAGE_LDFLAGS)
 
 source_cpp = \
-  $(srcdir)/Animation.cpp \
-  $(srcdir)/AnimationController.cpp \
-  $(srcdir)/AsyncFileWriter.cpp \
-  $(srcdir)/EasingCurve.cpp \
-  $(srcdir)/TextString.cpp \
-  $(srcdir)/TimeFunctions.cpp \
-  $(srcdir)/Template.cpp \
-  $(srcdir)/FilePath.cpp \
-  $(srcdir)/FileManager/NSerializer.cpp \
-  $(srcdir)/FileManager/NFileManagerGeneric.cpp \
-  $(srcdir)/FileManager/NFileManagerGNU.cpp \
-  $(srcdir)/SystemGNU.cpp \
-  $(srcdir)/OutputDevice.cpp \
-  $(srcdir)/Exception.cpp \
-  $(srcdir)/Memory.cpp \
-  $(srcdir)/Character/NUTF.cpp \
-  $(srcdir)/Character/NUni.cpp \
-  $(srcdir)/Character/NUnicode.cpp \
-  $(srcdir)/Color.cpp \
-  $(srcdir)/ColorPrivate.cpp \
-  $(srcdir)/Colors.cpp \
-  $(srcdir)/FileName.cpp \
-  $(srcdir)/ThreadGNU.cpp \
-  $(srcdir)/Parsing.cpp \
-  $(srcdir)/Logger.cpp \
-  $(srcdir)/LoggingWriter.cpp \
-  $(srcdir)/NUniqueIndex.cpp \
-  $(srcdir)/GlobalInitializer.cpp \
-  $(srcdir)/ObjectType.cpp \
-  $(srcdir)/Platform.cpp \
-  $(srcdir)/Rect.cpp \
-  $(srcdir)/FileIO.cpp \
-  $(srcdir)/Process.cpp \
-  $(srcdir)/NumberConversion.cpp \
-  $(srcdir)/NuxCore.cpp \
-  $(srcdir)/Object.cpp \
-  $(srcdir)/Math/Algo.cpp \
-  $(srcdir)/Math/Constants.cpp \
-  $(srcdir)/Math/MathFunctions.cpp \
-  $(srcdir)/Math/Line2D.cpp \
-  $(srcdir)/Math/Bezier.cpp \
-  $(srcdir)/Math/Spline.cpp \
-  $(srcdir)/Math/Quaternion.cpp \
-  $(srcdir)/Math/Matrix2.cpp \
-  $(srcdir)/Math/Trigonometry.cpp \
-  $(srcdir)/Math/Tweening.cpp \
-  $(srcdir)/Math/Complex.cpp \
-  $(srcdir)/Math/Point3D.cpp \
-  $(srcdir)/Math/Matrix4.cpp \
-  $(srcdir)/Math/Matrix3.cpp \
-  $(srcdir)/Math/Line3D.cpp \
-  $(srcdir)/RollingFileAppender.cpp \
-  $(srcdir)/InitiallyUnownedObject.cpp
+  Animation.cpp \
+  AnimationController.cpp \
+  AsyncFileWriter.cpp \
+  EasingCurve.cpp \
+  TextString.cpp \
+  TimeFunctions.cpp \
+  Template.cpp \
+  FilePath.cpp \
+  FileManager/NSerializer.cpp \
+  FileManager/NFileManagerGeneric.cpp \
+  FileManager/NFileManagerGNU.cpp \
+  SystemGNU.cpp \
+  OutputDevice.cpp \
+  Exception.cpp \
+  Memory.cpp \
+  Character/NUTF.cpp \
+  Character/NUni.cpp \
+  Character/NUnicode.cpp \
+  Color.cpp \
+  ColorPrivate.cpp \
+  Colors.cpp \
+  FileName.cpp \
+  ThreadGNU.cpp \
+  Parsing.cpp \
+  Logger.cpp \
+  LoggingWriter.cpp \
+  NUniqueIndex.cpp \
+  GlobalInitializer.cpp \
+  ObjectType.cpp \
+  Platform.cpp \
+  Rect.cpp \
+  FileIO.cpp \
+  Process.cpp \
+  NumberConversion.cpp \
+  NuxCore.cpp \
+  Object.cpp \
+  Math/Algo.cpp \
+  Math/Constants.cpp \
+  Math/MathFunctions.cpp \
+  Math/Line2D.cpp \
+  Math/Bezier.cpp \
+  Math/Spline.cpp \
+  Math/Quaternion.cpp \
+  Math/Matrix2.cpp \
+  Math/Trigonometry.cpp \
+  Math/Tweening.cpp \
+  Math/Complex.cpp \
+  Math/Point3D.cpp \
+  Math/Matrix4.cpp \
+  Math/Matrix3.cpp \
+  Math/Line3D.cpp \
+  RollingFileAppender.cpp \
+  InitiallyUnownedObject.cpp
 
 source_file_manager_h = \
-  $(srcdir)/FileManager/NFileManagerGNU.h \
-  $(srcdir)/FileManager/NFileManagerGeneric.h \
-  $(srcdir)/FileManager/NSerializer.h
+  FileManager/NFileManagerGNU.h \
+  FileManager/NFileManagerGeneric.h \
+  FileManager/NSerializer.h
 
 source_character_h = \
-  $(srcdir)/Character/NUTF.h \
-  $(srcdir)/Character/NUni.h \
-  $(srcdir)/Character/NUnicode.h \
-  $(srcdir)/Character/NTChar.h
+  Character/NUTF.h \
+  Character/NUni.h \
+  Character/NUnicode.h \
+  Character/NTChar.h
 
 source_math_h = \
-  $(srcdir)/Math/Algo.h \
-  $(srcdir)/Math/Bezier.h \
-  $(srcdir)/Math/Constants.h \
-  $(srcdir)/Math/Point3D.h \
-  $(srcdir)/Math/Vector4.h \
-  $(srcdir)/Math/Matrix2.h \
-  $(srcdir)/Math/Spline.h \
-  $(srcdir)/Math/Vector3.h \
-  $(srcdir)/Math/MathFunctions.h \
-  $(srcdir)/Math/Quaternion.h \
-  $(srcdir)/Math/Trigonometry.h \
-  $(srcdir)/Math/Line3D.h \
-  $(srcdir)/Math/MathInc.h \
-  $(srcdir)/Math/Complex.h \
-  $(srcdir)/Math/Matrix3.h \
-  $(srcdir)/Math/Vector2.h \
-  $(srcdir)/Math/Line2D.h \
-  $(srcdir)/Math/Point2D.h \
-  $(srcdir)/Math/Point2D-inl.h \
-  $(srcdir)/Math/Tweening.h \
-  $(srcdir)/Math/Matrix4.h \
-  $(srcdir)/Math/MathUtility.h
+  Math/Algo.h \
+  Math/Bezier.h \
+  Math/Constants.h \
+  Math/Point3D.h \
+  Math/Vector4.h \
+  Math/Matrix2.h \
+  Math/Spline.h \
+  Math/Vector3.h \
+  Math/MathFunctions.h \
+  Math/Quaternion.h \
+  Math/Trigonometry.h \
+  Math/Line3D.h \
+  Math/MathInc.h \
+  Math/Complex.h \
+  Math/Matrix3.h \
+  Math/Vector2.h \
+  Math/Line2D.h \
+  Math/Point2D.h \
+  Math/Point2D-inl.h \
+  Math/Tweening.h \
+  Math/Matrix4.h \
+  Math/MathUtility.h
 
 source_h = \
-  $(srcdir)/Animation.h \
-  $(srcdir)/Animation-inl.h \
-  $(srcdir)/AnimationController.h \
-  $(srcdir)/AsyncFileWriter.h \
-  $(srcdir)/EasingCurve.h \
-  $(srcdir)/Point.h \
-  $(srcdir)/FilePath.h \
-  $(srcdir)/System.h \
-  $(srcdir)/Parsing.h \
-  $(srcdir)/StringConversion.h \
-  $(srcdir)/GlobalInitializer.h \
-  $(srcdir)/Rect.h \
-  $(srcdir)/Platform.h \
-  $(srcdir)/Inalogic.h \
-  $(srcdir)/Color.h \
-  $(srcdir)/Colors.h \
-  $(srcdir)/Logger.h \
-  $(srcdir)/LoggerPrivate.h \
-  $(srcdir)/LoggingWriter.h \
-  $(srcdir)/RollingFileAppender.h \
-  $(srcdir)/Memory.h \
-  $(srcdir)/Error.h \
-  $(srcdir)/SystemGNU.h \
-  $(srcdir)/NuxCore.h \
-  $(srcdir)/FileName.h \
-  $(srcdir)/OutputDevice.h \
-  $(srcdir)/Process.h \
-  $(srcdir)/ObjectType.h \
-  $(srcdir)/ObjectPtr.h \
-  $(srcdir)/NumberConversion.h \
-  $(srcdir)/Object.h \
-  $(srcdir)/Size.h \
-  $(srcdir)/Size-inl.h \
-  $(srcdir)/Exception.h \
-  $(srcdir)/TimeFunctions.h \
-  $(srcdir)/Macros.h \
-  $(srcdir)/ThreadGNU.h \
-  $(srcdir)/TextString.h \
-  $(srcdir)/Template.h \
-  $(srcdir)/NUniqueIndex.h \
-  $(srcdir)/FileIO.h \
-  $(srcdir)/InitiallyUnownedObject.h \
-  $(srcdir)/Property.h \
-  $(srcdir)/Property-inl.h \
-  $(srcdir)/PropertyAnimation.h \
-  $(srcdir)/PropertyOperators.h \
-  $(srcdir)/PropertyTraits.h \
-  $(srcdir)/Win32Dialogs/NWin32Clipboard.h
+  Animation.h \
+  Animation-inl.h \
+  AnimationController.h \
+  AsyncFileWriter.h \
+  EasingCurve.h \
+  Point.h \
+  FilePath.h \
+  System.h \
+  Parsing.h \
+  StringConversion.h \
+  GlobalInitializer.h \
+  Rect.h \
+  Platform.h \
+  Inalogic.h \
+  Color.h \
+  Colors.h \
+  Logger.h \
+  LoggerPrivate.h \
+  LoggingWriter.h \
+  RollingFileAppender.h \
+  Memory.h \
+  Error.h \
+  SystemGNU.h \
+  NuxCore.h \
+  FileName.h \
+  OutputDevice.h \
+  Process.h \
+  ObjectType.h \
+  ObjectPtr.h \
+  NumberConversion.h \
+  Object.h \
+  Size.h \
+  Size-inl.h \
+  Exception.h \
+  TimeFunctions.h \
+  Macros.h \
+  ThreadGNU.h \
+  TextString.h \
+  Template.h \
+  NUniqueIndex.h \
+  FileIO.h \
+  InitiallyUnownedObject.h \
+  Property.h \
+  Property-inl.h \
+  PropertyAnimation.h \
+  PropertyOperators.h \
+  PropertyTraits.h \
+  Win32Dialogs/NWin32Clipboard.h
 
 libnux_core_@NUX_API_VERSION@_la_SOURCES = \
   $(source_cpp) \
@@ -196,6 +196,29 @@ nux-core-@NUX_API_VERSION@.pc: nux-core.pc
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = nux-core-@NUX_API_VERSION@.pc
 
+unused_src = \
+ Character/NAscii.cpp \
+ Character/NAscii.h \
+ Character/NUnicodeGNU.cpp \
+ Character/NUnicodeGNU.h \
+ CppReadme.txt \
+ FileManager/NFileManagerWindows.cpp \
+ FileManager/NFileManagerWindows.h \
+ Plugin/NPlugin.h \
+ Plugin/NPluginInterface.h \
+ Plugin/NPluginManager.cpp \
+ Plugin/NPluginManager.h \
+ Plugin/NPluging.cpp \
+ SystemWindows.cpp \
+ SystemWindows.h \
+ ThreadWin.cpp \
+ ThreadWin.h \
+ Win32Dialogs/NWin32Clipboard.cpp \
+ Win32Dialogs/NWin32CustomDialog.cpp \
+ Win32Dialogs/NWin32CustomDialog.h \
+ Win32Dialogs/NWin32MessageBox.cpp \
+ Win32Dialogs/NWin32MessageBox.h
+
 CLEANFILES += nux-core-@NUX_API_VERSION@.pc
 DISTCLEANFILES += nux-core.pc
-EXTRA_DIST += nux-core.pc.in
+EXTRA_DIST += nux-core.pc.in ${unused_src}
