--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,7 @@ Build-Depends: debhelper (>= 9),
                libgeis-dev (>= 2.2.10),
                libibus-1.0-dev,
                libxtst-dev,
+               xserver-xorg-video-dummy,
 Standards-Version: 3.9.6
 Section: libs
 Homepage: http://launchpad.net/nux
